# bitrust

./: .gitignore  .travis.yml  Cargo.toml  LICENSE.md  README.md
bencode/: Cargo.toml  README.md
bencode/src/: de.rs  decoder.rs  error.rs  lib.rs  read.rs  ser.rs  token.rs
bencode/tests/: de.rs  lib.rs  ser.rs
core/: Cargo.toml
