[package]
name = "bitrust_bencode"
version = "0.1.0"
edition = "2021"
description = "Bencode serialization & deserialization library for Bitrust"
authors = ["Adrian Plavka <adrian.plavka@gmail.com>"]
license = "MIT"

[dependencies]
lexical = { version = "6", features = ["parse-integers", "parse-floats"] }
nom = "7"
num-traits = "0"
serde = "1"
thiserror = "1"

[dev-dependencies]
arbitrary = "1"
serde_derive = "1"
serde_bytes = "0"
rand = "0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
